--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "Cuda-FE": {
+    "Vuighe-FE": {
       "root": "src",
       "sourceRoot": "src",
       "projectType": "application",
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/Cuda-FE",
+            "outputPath": "dist/Vuighe-FE",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -56,18 +56,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "Cuda-FE:build"
+            "browserTarget": "Vuighe-FE:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "Cuda-FE:build:production"
+              "browserTarget": "Vuighe-FE:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "Cuda-FE:build"
+            "browserTarget": "Vuighe-FE:build"
           }
         },
         "test": {
@@ -101,7 +101,7 @@
         }
       }
     },
-    "Cuda-FE-e2e": {
+    "Vuighe-FE-e2e": {
       "root": "e2e/",
       "projectType": "application",
       "architect": {
@@ -109,11 +109,11 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "Cuda-FE:serve"
+            "devServerTarget": "Vuighe-FE:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "Cuda-FE:serve:production"
+              "devServerTarget": "Vuighe-FE:serve:production"
             }
           }
         },
@@ -129,5 +129,5 @@
       }
     }
   },
-  "defaultProject": "Cuda-FE"
+  "defaultProject": "Vuighe-FE"
 }
