--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.10",
     "ngx-bootstrap": "^3.0.1",
     "ngx-progressbar": "^2.1.1",
     "ngx-toastr": "^9.0.2",
