Completed Api Create And Delete Film & Episode

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/styles.scss"
             ],
             "scripts": [
-              "src/assets/libs/jquery.js"
+              "src/assets/libs/jquery.js",
+              "src/assets/libs/redactor/redactor.js"
             ]
           },
           "configurations": {
