--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
     "ngx-bootstrap": "^3.0.1",
+    "ngx-infinite-scroll": "^6.0.1",
     "ngx-progressbar": "^2.1.1",
     "ngx-toastr": "^9.0.2",
     "rxjs": "^6.0.0",
