--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vuighe-fe",
+  "name": "vuighe-fe",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "angular-tree-component": "^8.0.0",
     "core-js": "^2.5.4",
     "jwt-decode": "^2.2.0",
     "lodash": "^4.17.10",
